--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
     />
 
     <!-- Toast -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
+      integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <link rel="stylesheet" href="./assets/css/commons/toastr.min.css" />
     <script src="./assets/js/commons/toastr.min.js"></script>
 
@@ -91,7 +96,10 @@
       <header class="header" style="background-color: transparent"></header>
 
       <!-- Section top page product -->
-      <section class="top-page-prod">
+      <section
+        class="top-page-prod"
+        style="background-image: url('./assets/imgs/home/top-background.png')"
+      >
         <div class="grid wide">
           <div class="top-page-prod-wrapper">
             <h3 class="top-page-prod__product-description">
@@ -109,277 +117,7 @@
       </section>
 
       <!-- Section under top -->
-      <section class="under-top">
-        <div class="grid wide">
-          <ul class="under-top__category-list">
-            <div class="row">
-              <div class="col l-2-4 m-4 c-6">
-                <li class="under-top__category-item">
-                  <a
-                    href="./collections.html?categories=keyboard"
-                    class="under-top__category-item-link"
-                  >
-                    <img
-                      class="under-top__category-item-img"
-                      src="./assets/imgs/home/under-top-category-1.webp"
-                      alt="Product category"
-                    />
-                    <p class="under-top__category-name">Bàn phím cơ</p>
-                  </a>
-                </li>
-              </div>
-
-              <div class="col l-2-4 m-4 c-6">
-                <li class="under-top__category-item">
-                  <a
-                    href="./collections.html?categories=mouse"
-                    class="under-top__category-item-link"
-                  >
-                    <img
-                      class="under-top__category-item-img"
-                      src="./assets/imgs/home/under-top-category-2.webp"
-                      alt="Product category"
-                    />
-                    <p class="under-top__category-name">Chuột</p>
-                  </a>
-                </li>
-              </div>
-              <div class="col l-2-4 m-4 c-6">
-                <li class="under-top__category-item">
-                  <a
-                    href="./collections.html?categories=pad"
-                    class="under-top__category-item-link"
-                  >
-                    <img
-                      class="under-top__category-item-img"
-                      src="./assets/imgs/home/under-top-category-3.webp"
-                      alt="Product category"
-                    />
-                    <p class="under-top__category-name">Lót chuột</p>
-                  </a>
-                </li>
-              </div>
-              <div class="col l-2-4 m-4 c-6">
-                <li class="under-top__category-item">
-                  <a href="" class="under-top__category-item-link">
-                    <img
-                      class="under-top__category-item-img"
-                      src="./assets/imgs/home/under-top-category-4.webp"
-                      alt="Product category"
-                    />
-                    <p class="under-top__category-name">Feet chuột</p>
-                  </a>
-                </li>
-              </div>
-              <div class="col l-2-4 m-4 c-6">
-                <li class="under-top__category-item">
-                  <a href="" class="under-top__category-item-link">
-                    <img
-                      class="under-top__category-item-img"
-                      src="./assets/imgs/home/under-top-category-5.webp"
-                      alt="Product category"
-                    />
-                    <p class="under-top__category-name">Switch & Lube</p>
-                  </a>
-                </li>
-              </div>
-            </div>
-          </ul>
-
-          <div class="under-top__brand-container">
-            <h3 class="under-top__brand-heading">Các thương hiệu phân phối</h3>
-
-            <ul class="under-top__brand-list">
-              <div class="row">
-                <div class="col l-2-4 m-4 c-6">
-                  <li class="under-top__brand-item">
-                    <a
-                      href="./collections.html?brands=filco"
-                      class="under-top__brand-item-link"
-                      ><img
-                        class="under-top__brand-item-img"
-                        src="./assets/imgs/home/under-top-brand-1.webp"
-                        alt="Brand 1"
-                    /></a>
-                  </li>
-                </div>
-                <div class="col l-2-4 m-4 c-6">
-                  <li class="under-top__brand-item">
-                    <a
-                      href="./collections.html?brands=finalmouse"
-                      class="under-top__brand-item-link"
-                      ><img
-                        class="under-top__brand-item-img"
-                        src="./assets/imgs/home/under-top-brand-2.webp"
-                        alt="Brand 2"
-                    /></a>
-                  </li>
-                </div>
-                <div class="col l-2-4 m-4 c-6">
-                  <li class="under-top__brand-item">
-                    <a
-                      href="./collections.html?brands=realforce"
-                      class="under-top__brand-item-link"
-                      ><img
-                        class="under-top__brand-item-img"
-                        src="./assets/imgs/home/under-top-brand-3.png"
-                        alt="Brand 3"
-                    /></a>
-                  </li>
-                </div>
-                <div class="col l-2-4 m-4 c-6">
-                  <li class="under-top__brand-item">
-                    <a
-                      href="./collections.html?brands=lamzu"
-                      class="under-top__brand-item-link"
-                      ><img
-                        class="under-top__brand-item-img"
-                        src="./assets/imgs/home/under-top-brand-4.webp"
-                        alt="Brand 4"
-                    /></a>
-                  </li>
-                </div>
-                <div class="col l-2-4 m-4 c-6">
-                  <li class="under-top__brand-item">
-                    <a
-                      href="./collections.html?brands=pulsar"
-                      class="under-top__brand-item-link"
-                      ><img
-                        class="under-top__brand-item-img"
-                        src="./assets/imgs/home/under-top-brand-5.avif"
-                        alt="Brand 5"
-                    /></a>
-                  </li>
-                </div>
-                <div class="col l-2-4 m-4 c-6">
-                  <li class="under-top__brand-item">
-                    <a
-                      href="./collections.html?brands=ninjutso"
-                      class="under-top__brand-item-link"
-                      ><img
-                        class="under-top__brand-item-img"
-                        src="./assets/imgs/home/under-top-brand-6.avif"
-                        alt="Brand 6"
-                    /></a>
-                  </li>
-                </div>
-                <div class="col l-2-4 m-4 c-6">
-                  <li class="under-top__brand-item">
-                    <a
-                      href="./collections.html?brands=glorious"
-                      class="under-top__brand-item-link"
-                      ><img
-                        class="under-top__brand-item-img"
-                        src="./assets/imgs/home/under-top-brand-7.avif"
-                        alt="Brand 7"
-                    /></a>
-                  </li>
-                </div>
-                <div class="col l-2-4 m-4 c-6">
-                  <li class="under-top__brand-item">
-                    <a
-                      href="./collections.html?brands=lethal"
-                      class="under-top__brand-item-link"
-                      ><img
-                        class="under-top__brand-item-img"
-                        src="./assets/imgs/home/under-top-brand-8.webp"
-                        alt="Brand 8"
-                    /></a>
-                  </li>
-                </div>
-                <div class="col l-2-4 m-4 c-6">
-                  <li class="under-top__brand-item">
-                    <a
-                      href="./collections.html?brands=skypad"
-                      class="under-top__brand-item-link"
-                      ><img
-                        class="under-top__brand-item-img"
-                        src="./assets/imgs/home/under-top-brand-9.webp"
-                        alt="Brand 9"
-                    /></a>
-                  </li>
-                </div>
-                <div class="col l-2-4 m-4 c-6">
-                  <li class="under-top__brand-item">
-                    <a
-                      href="./collections.html?brands=razer"
-                      class="under-top__brand-item-link"
-                      ><img
-                        class="under-top__brand-item-img"
-                        src="./assets/imgs/home/under-top-brand-10.png"
-                        alt="Brand 10"
-                    /></a>
-                  </li>
-                </div>
-              </div>
-            </ul>
-          </div>
-
-          <div class="under-top__hot-products-container">
-            <div class="under-top__hot-products-heading-wrapper">
-              <h3 class="under-top__hot-products-heading">
-                Các sản phẩm thịnh hành
-              </h3>
-
-              <a href="" class="under-top__hot-products-view-more-btn">
-                Xem thêm<i class="bi bi-chevron-right"></i>
-              </a>
-            </div>
-
-            <ul class="under-top__hot-list">
-              <div class="row">
-                <div class="col l-2-4 m-4 c-6">
-                  <li class="under-top__hot-item product-card">
-                    <a
-                      href="./product-detail.html?productId=1"
-                      class="under-top__hot-item-link product-card__link"
-                    >
-                      <div
-                        class="under-top__hot-item-img-wrapper product-card__img-wrapper"
-                      >
-                        <img
-                          class="under-top__hot-item-img main-img product-card__img product-card__main-img"
-                          src="./assets/imgs/home/mock-product.webp"
-                          alt="Hot product image"
-                        />
-
-                        <img
-                          class="under-top__hot-item-img hover-img product-card__img product-card__hover-img"
-                          src="./assets/imgs/home/mock-product-2.webp"
-                          alt="Hot product image"
-                        />
-                      </div>
-
-                      <p class="under-top__hot-item-name product-card__name">
-                        Chuột không dây siêu nhẹ Pulsar X2 Wireless X
-                        RandomfrankP (Limited Edition)
-                      </p>
-                    </a>
-
-                    <button
-                      class="btn btn-primary under-top__hot-item-add-cart-btn product-card__add-cart-btn"
-                      data-product-id
-                      data-add-to-cart-btn
-                    >
-                      + Thêm
-                    </button>
-
-                    <div
-                      class="under-top__hot-item-sold-out product-card__sold-out"
-                    >
-                      Hết hàng
-                    </div>
-
-                    <p class="under-top__hot-item-price product-card__price">
-                      2.499.000đ
-                    </p>
-                  </li>
-                </div>
-              </div>
-            </ul>
-          </div>
-        </div>
-      </section>
+      <section class="under-top"></section>
 
       <!-- Section trending products 1-->
       <section class="trend-prod-1"></section>
@@ -397,6 +135,7 @@
     <script type="module">
       import { renderHeader } from './assets/js/commons/header/header.js';
       import { renderFooter } from './assets/js/commons/footer.js';
+      import { renderSectionUnderTop } from './assets/js/home/section-under-top.js';
       import { renderSectionTrendingProduct1 } from './assets/js/home/section-trending-product-1.js';
       import { renderSectionTrendingProduct2 } from './assets/js/home/section-trending-product-2.js';
       import { renderSectionTrendingProduct3 } from './assets/js/home/section-trending-product-3.js';
@@ -406,6 +145,9 @@
 
       const footer = document.querySelector('footer.footer');
       renderFooter(footer);
+
+      const underTop = document.querySelector('section.under-top');
+      renderSectionUnderTop(underTop);
 
       const trendProd1 = document.querySelector('section.trend-prod-1');
       renderSectionTrendingProduct1(trendProd1);
