update validation for signup and register

--- a/contact.html
+++ b/contact.html
@@ -81,16 +81,16 @@
                 </p>
                 <p>Thông tin doanh nghiệp:</p>
                 <ul>
-                    <li>Giấy phép ĐKKD: 0307185382</li>
-                    <li>Ngày cấp: 04 tháng 02 năm 2009</li>
+                    <li>Giấy phép ĐKKD: 02327496381</li>
+                    <li>Ngày cấp: 05 tháng 01 năm 2023</li>
                     <li>Nơi cấp: sở KHĐT TP.Hồ Chí Minh</li>
                 </ul>
                 <p>Thông tin liên hệ:</p>
                 <ul>
-                    <li>Địa chỉ: 89 Hồ Văn Huê, P9, Q.Phú Nhuận Hồ Chí Minh Việt Nam</li>
+                    <li>Địa chỉ: 702 Nguyễn Văn Linh, Quận 7, Hồ Chí Minh Việt Nam</li>
                     <li>Trang web chính thức của công ty: www.gearclub.vn</li>
-                    <li>Điện thoại (028) 6.292.1182</li>
-                    <li>Hotline hỗ trợ khách hàng: 0904.135.321 và 0899.454.393</li>
+                    <li>Điện thoại (028) 6.283.6481</li>
+                    <li>Hotline hỗ trợ khách hàng: 0986.233.643 và 0899.351.972</li>
                     <li>Email: info@gearclub.vn</li>
                     <li>Fanpage Phong Cách Xanh: www.facebook.com/gearclubvn</li>
                     <li>Fanpage Filco: www.facebook.com/filcovietnam</li>
