--- a/refund.html
+++ b/refund.html
@@ -80,7 +80,7 @@
                 </div>
                 <h3>Điều kiện hoàn tiền</h3>
                 <ul>
-                    <li>Sản phẩm Phong Cách Xanh giao đến bạn không đúng hoặc không đủ chủng loại, số lượng mà bạn đã đặt hàng.</li>
+                    <li>Sản phẩm Gearclub giao đến bạn không đúng hoặc không đủ chủng loại, số lượng mà bạn đã đặt hàng.</li>
                     <li>Sản phẩm mà bạn đặt hết hàng.</li>
                 </ul>
                 <h3>Mức hoàn:</h3>
