--- a/shipping.html
+++ b/shipping.html
@@ -91,7 +91,7 @@
                 <ul>
                     <li>Các đơn đặt hàng ngoài giờ hành chính sẽ tính thời gian bắt đầu từ 8h30 sáng ngày hôm sau.</li>
                     <li>Thời gian giao các đơn hàng ngoại thành HCM và tỉnh không bao gồm thứ 7 và chủ nhật.</li>
-                    <li>Đối với các đơn hàng giao hẹn giờ, chuyển phát nhanh, siêu tốc, hàng cồng kềnh khách hàng vui lòng liên hệ Phong Cách Xanh để biết thêm chi tiết.</li>
+                    <li>Đối với các đơn hàng giao hẹn giờ, chuyển phát nhanh, siêu tốc, hàng cồng kềnh khách hàng vui lòng liên hệ <a href="./contact.html">Gearclub</a> để biết thêm chi tiết.</li>
                 </ul>
                 <h2><b>Hình thức giao hàng</b></h2>
                 <ul>
@@ -105,7 +105,7 @@
                     <li>Khi nhận hàng quý khách có quyền yêu cầu nhân viên giao hàng mở đóng gói cho kiểm (không rọc seal của hộp sản phẩm).</li>
                     <li>Trường hợp đơn hàng đặt mà bên bán giao không đúng loại sản phẩm quý khách có quyền trả hàng và không thanh toán tiền.</li>
                     <li>Trường hợp quý khách đã thanh toán trước nhưng đơn hàng không đúng quý khách yêu cầu hoàn hàng và giao lại đơn mới như đã đặt.</li>
-                    <li>Trong trường hợp yêu cầu hoàn tiền hoặc đổi đơn quý khách liên hệ qua Email: sales@gearclub.vn hoặc số điện thoại (028) 6.292.1182 chúng tôi cam kết sẽ giải quyết mọi yêu cầu của quý khách.</li>
+                    <li>Trong trường hợp yêu cầu hoàn tiền hoặc đổi đơn quý khách liên hệ qua Email: sales@gearclub.vn hoặc số điện thoại (028) 6.283.6481 chúng tôi cam kết sẽ giải quyết mọi yêu cầu của quý khách.</li>
                 </ul>
             </div>
         </section>
