--- a/admin/collection.html
+++ b/admin/collection.html
@@ -37,7 +37,7 @@
     </div>
 
     <script type="module">
-        import { renderNavbar, renderSearchbar } from '/assets/js/admin/adminNav.js'
+        import { renderNavbar } from '/assets/js/admin/adminNav.js'
   
         const nav = document.querySelector('div.navbar');
         renderNavbar(nav);
