admin login, fix some minor thing

--- a/admin/login.html
+++ b/admin/login.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <div class="center">
-        <h1>Login</h1>
+        <h1>Gearclub Admin</h1>
         <form method="post">
             <div class="text_field">
                 <input type="text" required>
