done admin login logout

--- a/admin/order.html
+++ b/admin/order.html
@@ -42,6 +42,9 @@
       </div>
     </div>
 
+    <!-- Redirect script -->
+    <script src="../assets/js/admin/redirect-script.js" type="module"></script>
+
     <script type="module">
       import {
         renderNavbar,
