--- a/admin/user.html
+++ b/admin/user.html
@@ -1,98 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-        <!-- Font awesome icom -->
+    <!-- Font awesome icom -->
     <link
-        rel="stylesheet"
-        href="/assets/fonts/fontawesome-free-6.4.0-web/css/all.min.css"
+      rel="stylesheet"
+      href="/assets/fonts/fontawesome-free-6.4.0-web/css/all.min.css"
     />
 
     <!-- Inter Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap"
-        rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap"
+      rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/assets/css/admin/admin.css"/>
-</head>
-<body>
+    <link rel="stylesheet" href="/assets/css/admin/admin.css" />
+  </head>
+  <body>
     <div class="main">
-        <div class="navbar"></div>
-        <div class="content">
-            <div class="title">User</div>
-            <div class="search-bar"></div>
-            <div class="table">
-                <!-- <table class="data">
-                    <thead>
-                        <th style="width: 5%">ID</th>
-                        <th>Email</th>
-                        <th style="width: 20%">First Name</th>
-                        <th style="width: 20%">Last Name</th>
-                        <th style="width: 80px">Edit</th>
-                        <th style="width: 80px">Delete</th>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>myname@gmail.com</td>
-                            <td>My</td>
-                            <td>Name</td>
-                            <td><button class="edit"><i class="fa fa-edit"></i></button></td>
-                            <td><button class="delete"><i class="fa fa-trash"></i></button></td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>myname@gmail.com</td>
-                            <td>My</td>
-                            <td>Name</td>
-                            <td><button class="edit"><i class="fa fa-edit"></i></button></td>
-                            <td><button class="delete"><i class="fa fa-trash"></i></button></td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>myname@gmail.com</td>
-                            <td>My</td>
-                            <td>Name</td>
-                            <td><button class="edit"><i class="fa fa-edit"></i></button></td>
-                            <td><button class="delete"><i class="fa fa-trash"></i></button></td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>myname@gmail.com</td>
-                            <td>My</td>
-                            <td>Name</td>
-                            <td><button class="edit"><i class="fa fa-edit"></i></button></td>
-                            <td><button class="delete"><i class="fa fa-trash"></i></button></td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>myname@gmail.com</td>
-                            <td>My</td>
-                            <td>Name</td>
-                            <td><button class="edit"><i class="fa fa-edit"></i></button></td>
-                            <td><button class="delete"><i class="fa fa-trash"></i></button></td>
-                        </tr>
-                    </tbody>
-                </table> -->
-            </div>
+      <div class="navbar"></div>
+      <div class="content">
+        <div class="title">Khách hàng</div>
+        <div class="search-bar"></div>
+        <div class="table">
+          <!-- <table class="data">
+            <thead>
+              <th style="width: 5%">ID</th>
+              <th>Email</th>
+              <th style="width: 20%">First Name</th>
+              <th style="width: 20%">Last Name</th>
+              <th style="width: 80px">Edit</th>
+              <th style="width: 80px">Delete</th>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>myname@gmail.com</td>
+                <td>My</td>
+                <td>Name</td>
+                <td>
+                  <button class="edit"><i class="fa fa-edit"></i></button>
+                </td>
+                <td>
+                  <button class="delete"><i class="fa fa-trash"></i></button>
+                </td>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td>myname@gmail.com</td>
+                <td>My</td>
+                <td>Name</td>
+                <td>
+                  <button class="edit"><i class="fa fa-edit"></i></button>
+                </td>
+                <td>
+                  <button class="delete"><i class="fa fa-trash"></i></button>
+                </td>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td>myname@gmail.com</td>
+                <td>My</td>
+                <td>Name</td>
+                <td>
+                  <button class="edit"><i class="fa fa-edit"></i></button>
+                </td>
+                <td>
+                  <button class="delete"><i class="fa fa-trash"></i></button>
+                </td>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td>myname@gmail.com</td>
+                <td>My</td>
+                <td>Name</td>
+                <td>
+                  <button class="edit"><i class="fa fa-edit"></i></button>
+                </td>
+                <td>
+                  <button class="delete"><i class="fa fa-trash"></i></button>
+                </td>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td>myname@gmail.com</td>
+                <td>My</td>
+                <td>Name</td>
+                <td>
+                  <button class="edit"><i class="fa fa-edit"></i></button>
+                </td>
+                <td>
+                  <button class="delete"><i class="fa fa-trash"></i></button>
+                </td>
+              </tr>
+            </tbody>
+          </table> -->
         </div>
+      </div>
     </div>
 
-    <script type="module">
-        import { renderNavbar, renderSearchbar } from '/assets/js/admin/adminNav.js'
-  
-        const nav = document.querySelector('div.navbar');
-        renderNavbar(nav);
+    <!-- Redirect script -->
+    <script src="../assets/js/admin/redirect-script.js" type="module"></script>
 
-        const search = document.querySelector('div.search-bar');
-        renderSearchbar(search);
+    <script type="module">
+      import {
+        renderNavbar,
+        renderSearchbar,
+      } from '/assets/js/admin/adminNav.js';
+
+      const nav = document.querySelector('div.navbar');
+      renderNavbar(nav);
+
+      const search = document.querySelector('div.search-bar');
+      renderSearchbar(search);
     </script>
-</body>
+  </body>
 </html>
