--- a/admin/collection.html
+++ b/admin/collection.html
@@ -1,47 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-        <!-- Font awesome icom -->
+    <!-- Font awesome icom -->
     <link
-        rel="stylesheet"
-        href="/assets/fonts/fontawesome-free-6.4.0-web/css/all.min.css"
+      rel="stylesheet"
+      href="/assets/fonts/fontawesome-free-6.4.0-web/css/all.min.css"
     />
 
     <!-- Inter Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap"
-        rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap"
+      rel="stylesheet"
     />
 
-    <link href="https://unpkg.com/tabulator-tables@5.4.4/dist/css/tabulator.min.css" rel="stylesheet">
-    <script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.4.4/dist/js/tabulator.min.js"></script>
-    
-    <link rel="stylesheet" href="/assets/css/admin/admin.css"/>
-</head>
-<body>
+    <link
+      href="https://unpkg.com/tabulator-tables@5.4.4/dist/css/tabulator.min.css"
+      rel="stylesheet"
+    />
+    <script
+      type="text/javascript"
+      src="https://unpkg.com/tabulator-tables@5.4.4/dist/js/tabulator.min.js"
+    ></script>
+
+    <link rel="stylesheet" href="/assets/css/admin/admin.css" />
+  </head>
+  <body>
     <div class="main">
-        <div class="navbar"></div>
-        <div class="content">
-            <div class="title">Collection</div>
-            <div class="table">
-                <div id="table" style="margin-top: 40px"></div>
-            </div>
+      <div class="navbar"></div>
+      <div class="content">
+        <div class="title">Bộ sưu tập trang chủ</div>
+        <div class="table">
+          <div id="table" style="margin-top: 40px"></div>
         </div>
+      </div>
     </div>
 
+    <!-- Redirect script -->
+    <script src="../assets/js/admin/redirect-script.js" type="module"></script>
+
     <script type="module">
-        import { renderNavbar } from '/assets/js/admin/adminNav.js'
-  
-        const nav = document.querySelector('div.navbar');
-        renderNavbar(nav);
+      import { renderNavbar } from '/assets/js/admin/adminNav.js';
+
+      const nav = document.querySelector('div.navbar');
+      renderNavbar(nav);
     </script>
     <script type="module" src="/assets/js/admin/collection.js"></script>
-</body>
+  </body>
 </html>
