--- a/admin/editCollection.html
+++ b/admin/editCollection.html
@@ -1,74 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-        <!-- Font awesome icom -->
+    <!-- Font awesome icom -->
     <link
-        rel="stylesheet"
-        href="/assets/fonts/fontawesome-free-6.4.0-web/css/all.min.css"
+      rel="stylesheet"
+      href="/assets/fonts/fontawesome-free-6.4.0-web/css/all.min.css"
     />
 
     <!-- Inter Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap"
-        rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap"
+      rel="stylesheet"
     />
 
-    <link href="https://unpkg.com/tabulator-tables@5.4.4/dist/css/tabulator.min.css" rel="stylesheet">
-    <script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.4.4/dist/js/tabulator.min.js"></script>
+    <link
+      href="https://unpkg.com/tabulator-tables@5.4.4/dist/css/tabulator.min.css"
+      rel="stylesheet"
+    />
+    <script
+      type="text/javascript"
+      src="https://unpkg.com/tabulator-tables@5.4.4/dist/js/tabulator.min.js"
+    ></script>
 
-    <link rel="stylesheet" href="/assets/css/admin/admin.css"/>
-</head>
-<body>
+    <link rel="stylesheet" href="/assets/css/admin/admin.css" />
+  </head>
+  <body>
     <div class="main">
-        <div class="navbar"></div>
-        <div class="content">
-            <div class="title">Collection</div>
-            <div class="form">
-                <div class="input_field">
-                    <label>ID</label>
-                    <input id="id" type="text" class="input" disabled>
-                </div>
-                <div class="input_field">
-                    <label>Name</label>
-                    <input id="name" type="text" class="input" disabled>
-                </div>
-                <div class="input_field">
-                    <label>Product List</label>
-                    <textarea class="textarea" id="productList"></textarea>
-                </div>
-                <div class="input_field">
-                    <label>Created At</label>
-                    <input id="createdAt" type="text" class="input" disabled>
-                </div>
-                <div class="input_field">
-                    <label>Updated At</label>
-                    <input id="updatedAt" type="text" class="input" disabled>
-                </div>
-                <div class="buttons">
-                    <button id="save">Save</button>
-                </div>
-            </div>
-            <dialog class="modal" id="modal">
-                <h2 class="modal-title"></h2>
-                <p class="modal-message"></p>
-                <button class="close-button">Close</button>
-            </dialog>
+      <div class="navbar"></div>
+      <div class="content">
+        <div class="title">Chi tiết bộ sưu tập</div>
+        <div class="form">
+          <div class="input_field">
+            <label>ID</label>
+            <input id="id" type="text" class="input" disabled />
+          </div>
+          <div class="input_field">
+            <label>Tên bộ sưu tập</label>
+            <input id="name" type="text" class="input" disabled />
+          </div>
+          <div class="input_field">
+            <label>Các sản phẩm trong bộ sưu tập (mỗi sản phẩm 1 banner)</label>
+            <textarea class="textarea" id="productList"></textarea>
+          </div>
+          <div class="input_field">
+            <label>Ngày tạo</label>
+            <input id="createdAt" type="text" class="input" disabled />
+          </div>
+          <div class="input_field">
+            <label>Cập nhật lần cuối</label>
+            <input id="updatedAt" type="text" class="input" disabled />
+          </div>
+          <div class="buttons">
+            <button id="save">Save</button>
+          </div>
         </div>
+        <dialog class="modal" id="modal">
+          <h2 class="modal-title"></h2>
+          <p class="modal-message"></p>
+          <button class="close-button">Close</button>
+        </dialog>
+      </div>
     </div>
 
+    <!-- Redirect script -->
+    <script src="../assets/js/admin/redirect-script.js" type="module"></script>
+
     <script type="module">
-        import { renderNavbar, renderSearchbar } from '/assets/js/admin/adminNav.js'
-  
-        const nav = document.querySelector('div.navbar');
-        renderNavbar(nav);
+      import {
+        renderNavbar,
+        renderSearchbar,
+      } from '/assets/js/admin/adminNav.js';
+
+      const nav = document.querySelector('div.navbar');
+      renderNavbar(nav);
     </script>
     <script type="module" src="/assets/js/admin/editCollection.js"></script>
-</body>
+  </body>
 </html>
