--- a/admin/editOrder.html
+++ b/admin/editOrder.html
@@ -44,16 +44,9 @@
             <span class="order-detail__customer-summary-wrapper"></span>
 
             <span class="order-detail__item-header-price-wrapper">
-              <span class="order-detail__item-header-price-text"
-                >Tổng:
-              </span>
-              <span class="order-detail__item-header-price-num">
-              </span>
-              <span
-                class="order-detail__item-header-price-currency"
-              >
-                VND</span
-              >
+              <span class="order-detail__item-header-price-text">Tổng: </span>
+              <span class="order-detail__item-header-price-num"> </span>
+              <span class="order-detail__item-header-price-currency"> VND</span>
             </span>
           </div>
 
@@ -71,8 +64,12 @@
           <h1 class="order-detail__title">Trạng thái đơn hàng</h1>
           <div class="order-detail__order-status"></div>
           <div class="order-detail__order-control d-none">
-            <button class="btn btn-dark order-detail__decline-btn">Huỷ đơn</button>
-            <button class="btn btn-primary order-detail__accept-btn">Chấp nhận đơn</button>
+            <button class="btn btn-dark order-detail__decline-btn">
+              Huỷ đơn
+            </button>
+            <button class="btn btn-primary order-detail__accept-btn">
+              Chấp nhận đơn
+            </button>
           </div>
         </div>
         <dialog class="modal" id="modal">
@@ -82,6 +79,9 @@
         </dialog>
       </div>
     </div>
+
+    <!-- Redirect script -->
+    <script src="../assets/js/admin/redirect-script.js" type="module"></script>
 
     <script type="module">
       import {
@@ -118,7 +118,9 @@
         gap: 12px;
       }
 
-      .order-detail__item-header-price-text, .order-detail__item-header-price-num, .order-detail__item-header-price-currency {
+      .order-detail__item-header-price-text,
+      .order-detail__item-header-price-num,
+      .order-detail__item-header-price-currency {
         font-size: 1.7rem;
         color: var(--text-dark-color);
         font-weight: 600;
@@ -144,7 +146,7 @@
       .order-detail__item-body {
         flex-direction: column;
       }
-      
+
       .order-detail__item-control {
         align-self: flex-start;
       }
