--- a/admin/editProduct.html
+++ b/admin/editProduct.html
@@ -1,117 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-        <!-- Font awesome icom -->
+    <!-- Font awesome icom -->
     <link
-        rel="stylesheet"
-        href="/assets/fonts/fontawesome-free-6.4.0-web/css/all.min.css"
+      rel="stylesheet"
+      href="/assets/fonts/fontawesome-free-6.4.0-web/css/all.min.css"
     />
 
     <!-- Inter Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap"
-        rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap"
+      rel="stylesheet"
     />
 
-    <link href="https://unpkg.com/tabulator-tables@5.4.4/dist/css/tabulator.min.css" rel="stylesheet">
-    <script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.4.4/dist/js/tabulator.min.js"></script>
+    <!-- Tabulator -->
+    <link
+      href="https://unpkg.com/tabulator-tables@5.4.4/dist/css/tabulator.min.css"
+      rel="stylesheet"
+    />
+    <script
+      type="text/javascript"
+      src="https://unpkg.com/tabulator-tables@5.4.4/dist/js/tabulator.min.js"
+    ></script>
 
-    <link rel="stylesheet" href="/assets/css/admin/admin.css"/>
-</head>
-<body>
+    <!-- Jquery -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
+      integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
+    <!-- Modal -->
+    <script src="
+    https://cdn.jsdelivr.net/npm/modaal@0.4.4/dist/js/modaal.min.js
+    "></script>
+    <link
+      href="
+    https://cdn.jsdelivr.net/npm/modaal@0.4.4/dist/css/modaal.min.css
+    "
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="/assets/css/admin/admin.css" />
+  </head>
+  <body>
     <div class="main">
-        <div class="navbar"></div>
-        <div class="content">
-            <div class="title">Product</div>
-            <div class="form">
-                <div class="input_field">
-                    <label>ID</label>
-                    <input id="id" type="text" class="input" disabled>
-                </div>
-                <div class="input_field">
-                    <label>Name</label>
-                    <input id="name" type="text" class="input">
-                </div>
-                <div class="input_field">
-                    <label>Vendor Name</label>
-                    <input id="vendorName" type="text" class="input">
-                </div>
-                <div class="input_field">
-                    <label>Title</label>
-                    <input id="title" type="text" class="input">
-                </div>
-                <div class="input_field">
-                    <label>Price</label>
-                    <input id="price" type="number" class="input">
-                </div>
-                <div class="input_field">
-                    <label>Design Location</label>
-                    <input id="designLocation" type="text" class="input">
-                </div>
-                <div class="input_field">
-                    <label>Category</label>
-                    <div class="custom_select">
-                        <select id="category">
-                            <option value="mouse">Mouse</option>
-                            <option value="keyboard">Keyboard</option>
-                            <option value="pad">Mouse Pad</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="input_field">
-                    <label>Quantity</label>
-                    <input id="quantity" type="number" class="input">
-                </div>
-                <div class="input_field">
-                    <label>Warranty (Month)</label>
-                    <input id="warranty" type="number" class="input">
-                </div>
-                <div class="input_field">
-                    <label>Images</label>
-                    <textarea class="textarea" id="images"></textarea>
-                </div>
-                <div class="input_field">
-                    <label>Introduction</label>
-                    <textarea class="textarea" id="intro"></textarea>
-                </div>
-                <div class="input_field">
-                    <label>Description</label>
-                    <textarea class="textarea" id="description"></textarea>
-                </div>
-                <div class="input_field">
-                    <label>Features</label>
-                    <textarea class="textarea" id="features"></textarea>
-                </div>
-                <div class="input_field">
-                    <label>Highlights</label>
-                    <textarea class="textarea" id="highlights"></textarea>
-                </div>
-                <div class="buttons">
-                    <button id="delete">Delete</button>
-                    <button id="save">Save</button>
-                </div>
+      <div class="navbar"></div>
+      <div class="content">
+        <div class="title">Chi tiết sản phẩm</div>
+        <div class="form">
+          <div class="input_field">
+            <label>ID</label>
+            <input id="id" type="text" class="input" disabled />
+          </div>
+          <div class="input_field">
+            <label>Tên sản phẩm</label>
+            <input id="name" type="text" class="input" />
+          </div>
+          <div class="input_field">
+            <label>Nhà sản xuất</label>
+            <input id="vendorName" type="text" class="input" />
+          </div>
+          <div class="input_field">
+            <label>Tiêu đề sản phẩm</label>
+            <input id="title" type="text" class="input" />
+          </div>
+          <div class="input_field">
+            <label>Giá (VND)</label>
+            <input id="price" type="number" class="input" />
+          </div>
+          <div class="input_field">
+            <label>Nơi sản xuất</label>
+            <input id="designLocation" type="text" class="input" />
+          </div>
+          <div class="input_field">
+            <label>Danh mục</label>
+            <div class="custom_select">
+              <select id="category">
+                <option value="mouse">Chuột</option>
+                <option value="keyboard">Bàn phím</option>
+                <option value="pad">Pad chuột</option>
+              </select>
             </div>
-            <dialog class="modal" id="modal">
-                <h2 class="modal-title"></h2>
-                <p class="modal-message"></p>
-                <button class="close-button">Close</button>
-            </dialog>
+          </div>
+          <div class="input_field">
+            <label>Số lượng trong kho (sản phẩm)</label>
+            <input id="quantity" type="number" class="input" />
+          </div>
+          <div class="input_field">
+            <label>Thời hạn bảo hành (tháng)</label>
+            <input id="warranty" type="number" class="input" />
+          </div>
+          <div class="input_field">
+            <label>Ảnh (mỗi dòng 1 link)</label>
+            <textarea class="textarea" id="images"></textarea>
+          </div>
+          <div class="input_field">
+            <label>Giới thiệu sản phẩm</label>
+            <textarea class="textarea" id="intro"></textarea>
+          </div>
+          <div class="input_field">
+            <label>Mô tả sản phẩm</label>
+            <textarea class="textarea" id="description"></textarea>
+          </div>
+          <div class="input_field">
+            <label>Các tính năng (mỗi dòng 1 tính năng)</label>
+            <textarea class="textarea" id="features"></textarea>
+          </div>
+          <div class="input_field">
+            <label>Đặc tính nổi bật (mỗi dòng 1 đặc tính, ít nhất 3)</label>
+            <textarea class="textarea" id="highlights"></textarea>
+          </div>
+          <div class="buttons">
+            <a id="delete" class="confirm">Xoá sản phẩm</a>
+            <button id="save">Lưu thay đổi</button>
+          </div>
         </div>
+        <dialog class="modal" id="modal">
+          <h2 class="modal-title"></h2>
+          <p class="modal-message"></p>
+          <button class="close-button">Close</button>
+        </dialog>
+      </div>
     </div>
 
+    <!-- Modal -->
+    <div></div>
+
+    <!-- Redirect script -->
+    <script src="../assets/js/admin/redirect-script.js" type="module"></script>
     <script type="module">
-        import { renderNavbar, renderSearchbar } from '/assets/js/admin/adminNav.js'
-  
-        const nav = document.querySelector('div.navbar');
-        renderNavbar(nav);
+      import {
+        renderNavbar,
+        renderSearchbar,
+      } from '/assets/js/admin/adminNav.js';
+
+      const nav = document.querySelector('div.navbar');
+      renderNavbar(nav);
     </script>
     <script type="module" src="/assets/js/admin/editProduct.js"></script>
-</body>
+  </body>
 </html>
