--- a/admin/login.html
+++ b/admin/login.html
@@ -1,46 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-        <!-- Font awesome icom -->
+    <!-- Font awesome icom -->
     <link
-        rel="stylesheet"
-        href="/assets/fonts/fontawesome-free-6.4.0-web/css/all.min.css"
+      rel="stylesheet"
+      href="/assets/fonts/fontawesome-free-6.4.0-web/css/all.min.css"
     />
 
     <!-- Inter Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap"
-        rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap"
+      rel="stylesheet"
     />
 
-    <link href="https://unpkg.com/tabulator-tables@5.4.4/dist/css/tabulator.min.css" rel="stylesheet">
-    <script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.4.4/dist/js/tabulator.min.js"></script>
+    <link
+      href="https://unpkg.com/tabulator-tables@5.4.4/dist/css/tabulator.min.css"
+      rel="stylesheet"
+    />
+    <script
+      type="text/javascript"
+      src="https://unpkg.com/tabulator-tables@5.4.4/dist/js/tabulator.min.js"
+    ></script>
 
-    <link rel="stylesheet" href="/assets/css/admin/login.css"/>
-</head>
-<body>
+    <link rel="stylesheet" href="/assets/css/admin/login.css" />
+  </head>
+  <body>
     <div class="center">
-        <h1>Gearclub Admin</h1>
-        <form method="post">
-            <div class="text_field">
-                <input type="text" required>
-                <span></span>
-                <label>Username</label>
-            </div>
-            <div class="text_field">
-                <input type="password" required>
-                <span></span>
-                <label>Password</label>
-            </div>
-            <button id="login">Login</button>
-        </form>
+      <h1>Gearclub Admin</h1>
+      <div class="form">
+        <div class="login-error d-none">
+          *Tên đăng nhập hoặc mật khẩu không đúng
+        </div>
+        <div class="text_field">
+          <input type="email" required id="email" />
+          <span></span>
+          <label for="email">Email</label>
+        </div>
+        <div class="text_field">
+          <input type="password" required id="password" />
+          <span></span>
+          <label for="password">Password</label>
+        </div>
+        <button id="login">Login</button>
+      </div>
     </div>
-</body>
+
+    <!-- Login script -->
+    <script type="module">
+      import {
+        getAdminToken,
+        storeAdminToken,
+        removeAdminToken,
+      } from '../assets/js/commons/utils.js';
+      import { API } from '../assets/js/commons/restful-api.js';
+
+      // Redirect if already login
+      const token = getAdminToken();
+      if (token) {
+        window.location.replace('./product.html');
+      }
+
+      const loginBtn = document.querySelector('#login');
+
+      loginBtn.addEventListener('click', () => {
+        const email = document.querySelector('#email').value;
+        const password = document.querySelector('#password').value;
+        const error = document.querySelector('.login-error');
+
+        const options = {
+          method: 'POST',
+          body: JSON.stringify({
+            email: email,
+            password: password,
+          }),
+          headers: {
+            'Content-type': 'application/json; charset=UTF-8',
+          },
+        };
+        fetch(API.getAuthenticateAdminAPI(), options)
+          .then((response) => response.json())
+          .then((result) => {
+            // Login success => Save token then redirect
+            storeAdminToken(result.token);
+            window.location.replace('./product.html');
+          })
+          .catch((err) => {
+            // If login failed => Show error
+            error.classList.remove('d-none');
+            setTimeout(() => {
+              error.classList.add('d-none');
+            }, 3000);
+          });
+      });
+    </script>
+
+    <style>
+      .login-error {
+        margin-top: 16px;
+        padding: 8px 12px;
+        color: red;
+        border: 1px solid;
+        font-size: 14px;
+      }
+      .d-none {
+        display: none;
+      }
+    </style>
+  </body>
 </html>
