adding soft delete

--- a/admin/editProduct.html
+++ b/admin/editProduct.html
@@ -120,7 +120,7 @@
             <textarea class="textarea" id="highlights"></textarea>
           </div>
           <div class="buttons">
-            <a id="delete" class="confirm">Xoá sản phẩm</a>
+            <a id="delete" class="confirm">Xoá (xoá mềm)</a>
             <button id="save">Lưu thay đổi</button>
           </div>
         </div>
