--- a/admin/product.html
+++ b/admin/product.html
@@ -35,7 +35,15 @@
     <div class="main">
       <div class="navbar"></div>
       <div class="content">
-        <div class="title">Kho sản phẩm</div>
+        <div class="title">
+          Kho sản phẩm
+          <a
+            href="./deletedProduct.html"
+            style="font-size: 16px; color: orangered; display: inline-block;"
+            target="_blank"
+            >(Đến thùng rác <i class="fa-solid fa-trash"></i>)</a
+          >
+        </div>
         <div class="search-bar"></div>
         <div class="table">
           <div id="table"></div>
